# pypglite

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  runtests.py  setup.py
.github/workflows/: psycopg2-pglite-wheels.yml  wheels.yml
examples/: pypglite.py
examples/python/: README.md  example.py  pglite.py
pglite_native_runtime/: .gitignore  __init__.py
pypglite/: __init__.py  _native.py  dbapi2.py
scripts/: build-psycopg2-pglite-wheel.sh  build-pypglite-wheels.sh  smoke_pypglite.py
tests/: test_native_integration.py  test_pglite_native.py  test_pypglite.py
