[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = [
  "pp*",
  "*-musllinux_*",
  "*-win*",
  "*-manylinux_i686",
  "*-manylinux_aarch64",
  "*-manylinux_ppc64le",
  "*-manylinux_s390x",
]
build-verbosity = 1
test-command = "python {project}/scripts/smoke_pypglite.py"

[tool.cibuildwheel.linux]
before-all = "bash -lc 'if command -v dnf >/dev/null 2>&1; then dnf install -y bison flex perl; else yum install -y bison flex perl; fi'"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
